# agentic-f98e0dca

./: .gitignore  README.md
insight_agent/: Dockerfile  README.md  pyproject.toml
insight_agent/data/: sample_paid_media.csv
insight_agent/insight_agent/: __init__.py  engine.py  graph.py  schemas.py
insight_agent/insight_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
insight_agent/insight_agent/agents/: column_resolver.py  llm_adapter.py  metrics_agent.py  recommendation_agent.py
insight_agent/insight_agent/server/: api.py
insight_agent/insight_agent/utils/: text.py
insight_agent/tests/: test_engine.py
web/: README.md  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/lib/: insights.ts
